--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Roger</title>
-  <script src="https://fb.me/react-15.1.0.js"></script>
-  <script src="https://fb.me/react-dom-15.1.0.js"></script>
 </head>
 <body>
   <h1>Hello from Express</h2>
   <div id="react"></div>
-  <script src="js/app.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
