--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Hello from Express</h2>
   <div id="react"></div>
-  <script src="bundle.js"></script>
+  <script src="client-bundle.js"></script>
 </body>
 </html>
